# StampTool

./: .cproject  .gitignore  .project  AlbumGen.uml  CMakeLists.txt  CMakeLists1.txt  ColnectCountryList.txt  Persistent.xml  PersistentSave.xml  Project2010.prj.bak  README.md  TODO List  TestProfile.code-profile  USA_276-Stamp_Number_Commemorative_2000_2020.bak  USA_276-Stamp_Number_Commemorative_2015.bak  USA_276-Stamp_Number_Commemorative_2017.bak  United_States_of_America_2007.cat.bak  editor Colors.txt  x.clang-format
src/: &  AECmdData.cpp  AECmdData.h  AEItem.h  AlbumData.cpp  AlbumData.h  AlbumGenApp.cpp  AlbumGenApp.h  AlbumGenConfig.h  AlbumGenConfig.h.in  AlbumGeneratorApp.cpp  AlbumGeneratorApp.h  AlbumGeneratorConfig.h  AlbumGeneratorConfig.h.in  AlbumGeneratorDialog.cpp  AlbumGeneratorFrame.cpp  AlbumGeneratorFrame.h  AlbumGeneratorPanel.cpp  AlbumGeneratorPanel.h  AlbumSplitterWindow.cpp  AlbumSplitterWindow.h  AlbumTreeCtrl.cpp  AlbumTreeCtrl.h  ArrayWrapper.h  CMakeLists.txt  CMakeLists1.txt  CSV.cpp  CSV.h  CatalogCode.cpp  CatalogCode.h  CatalogData.cpp  CatalogData.h  CatalogDataTreeCtrl.cpp  CatalogDataTreeCtrl.h  Classification.cpp  Classification.h  DefinePeriodsDialog.cpp  Defs.cpp  Defs.h  FilterDialog.h  (+48 more)
src/DialogBlocks/: CharacteristicsPanel.cpp  CharacteristicsPanel.h  ColDetailsDialog.cpp  ColDetailsDialog.h  DescriptionPanel.cpp  DescriptionPanel.h  IdentificationPanel.cpp  IdentificationPanel.h  LabeledTextBox.cpp  LabeledTextBox.h  StampDetailsDialog.cpp  StampDetailsDialog.h  StampManager.pjd  StampManager.pjd.bak
src/GuiFiles/: AlbumGeneratorFrame.cpp  AlbumGeneratorPanel.cpp  AlbumGeneratorPanel.h  AlbumSplitterWindow.cpp  AlbumTreeCtrl.cpp  AlbumTreeCtrl.h  CMakeLists.txt  CatalogDataTreeCtrl.cpp  CatalogDataTreeCtrl.h  DefinePeriodsDialog.h  FilterDialog.cpp  GalleryPanel.h  LabeledTextBox.cpp  ManageAECmdData.cpp  SettingsDialog.h
src/Old/: AbumGeneratorDialog.cpp  AbumGeneratorDialog.h  AlbumGeneratorDialog.cpp  AlbumGeneratorDialog.h  AlbumGeneratorPanel.cpp  AlbumGeneratorPanel.h  csquery.xpm
src/album/: Album.cpp  Album.h  AlbumData.cpp  AlbumData.h  AlbumDefs.cpp  AlbumDefs.h  AlbumNode.cpp  AlbumNode.h  Attribute.h  CMakeLists.txt  Column.cpp  Column.h  LayoutNode.cpp  LayoutNode.h  Page.cpp  Page.h  Row.cpp  Row.h  Stamp.cpp  Stamp.h  Title.cpp  Title.h  TitlePage.cpp  TitlePage.h
src/art/: NotFound.xpm  NotFound2.xpm  StampBlack.xpm  StampBlackBlock.xpm  StampBlackMiniSheet.xpm  StampBlackSouvenirSheet.xpm  StampBlue.xpm  StampBlueMiniSheet.xpm  StampBlueMiniSheet_xpm.xpm  StampBlueSouvenirSheet.xpm  StampBrown.xpm  StampBrownBlock.xpm  StampBrownMiniSheet.xpm  StampBrownSouvenirSheet.xpm  StampGreen.xpm  StampGreenBlock.xpm  StampGreenMiniSheet.xpm  StampGreenSouvenirSheet.xpm  StampPurple.xpm  StampPurpleBlock.xpm  StampPurpleMiniSheet.xpm  StampPurpleSouvenirSheet.xpm  StampRed.xpm  StampRedBlock.xpm  StampRedMiniSheet.xpm  StampRedSouvenirSheet.xpm  StampYellow.xpm  StampYellowBlock.xpm  StampYellowMiniSheet.xpm  StampYellowSouvenirSheet.xpm  checked.xpm  doubleLine.xpm  fleur_di_lis.xpm  fleur_di_lis2.xpm  fleur_di_lis3.xpm  folder.xpm  menu.xpm
src/catalog/: CMakeLists.txt  CSV.cpp  CSV.h  CatalogBase.cpp  CatalogBase.h  CatalogCode.cpp  CatalogCode.h  CatalogData.cpp  CatalogData.h  CatalogDefs.cpp  CatalogDefs.h  CatalogDetailsDialog.cpp  CatalogDetailsDialog.h  CatalogList copy.cpp  CatalogList copy.h  CatalogList.cpp  CatalogList.h  CatalogNode.cpp  CatalogNode.h  CatalogSectionData.cpp  CatalogSectionData.h  CatalogVolume.cpp  CatalogVolume.h  CatalogVolumeData.cpp  CatalogVolumeData.h  Classification.cpp  Classification.h  Entry.cpp  Entry.h  InventoryItem.cpp  InventoryItem.h  MergeList.cpp  MergeList.h  MountCSV.cpp  Specimen.cpp  Specimen.h  Stamp.cpp  Stamp.h  StampMount.cpp  StampMount.h  (+1 more)
src/collection/: CMakeLists.txt  Collection.cpp  Collection.h  CollectionData.cpp  CollectionData.h  CollectionList.cpp  CollectionList.h  InventoryItem.h  InventoryItemDef.h
src/design/: Album.cpp  Album.h  AlbumBase.cpp  AlbumBase.h  AlbumData.cpp  AlbumData.h  AlbumList.cpp  AlbumList.h  AlbumVolume.cpp  AlbumVolume.h  Attribute (copy 1).h  Attribute.h  CMakeLists.txt  Column.cpp  Column.h  Defaults.cpp  Defaults.h  DesignData.cpp  DesignData.h  DesignDefs.cpp  DesignDefs.h  DisplayString.cpp  DisplayString.h  Font.cpp  Font.h  FontInfo.cpp  FontInfo.h  Frame.cpp  Frame.h  FrameDefaults.cpp  FrameDefaults.h  LabelFrame.cpp  LabelFrame.h  LayoutBase.cpp  LayoutBase.h  Page.cpp  Page.h  PageDefaults.cpp  PageDefaults.h  Row (copy 1).cpp  (+21 more)
src/doc-pages/: DeveloperInfo.md  MainPage.md  UserGuide.md
src/gui/: AlbumDesignPanel.cpp  AlbumDesignPanel.h  AlbumDesignTreePanel.cpp  AlbumDesignTreePanel.h  AlbumDetailsDialog.cpp  AlbumDetailsDialog.h  AlbumDetailsPanel.cpp  AlbumDetailsPanel.h  AlbumGenFrame.cpp  AlbumGenFrame.h  AlbumGenPanel.cpp  AlbumGenPanel.h  AlbumImagePanel.cpp  AlbumImagePanel.h  AlbumPanel.cpp  AlbumPanel.h  AlbumSplitterWindow.cpp  AlbumSplitterWindow.h  AlbumTOCTreeCtrl.cpp  AlbumTOCTreeCtrl.h  AlbumTreeCtrl.cpp  AlbumTreeCtrl.h  AlbumTreePanel.cpp  AlbumTreePanel.h  AppData.cpp  AppData.h  CMakeLists.txt  CatalogCodePanel.cpp  CatalogCodePanel.h  CatalogDetailsDialog.cpp  CatalogDetailsDialog.h  CatalogPanel.cpp  CatalogPanel.h  CatalogTOCTreeCtrl.cpp  CatalogTOCTreeCtrl.h  CatalogTreeCtrl.cpp  CatalogTreeCtrl.h  CatalogUpdater.cpp  CatalogUpdater.h  CharacteristicsPanel.cpp  (+117 more)
src/mount/: CMakeLists.txt
src/odt/: AutoStylesProp.cpp  AutoStylesProp.h  CMakeLists.txt  Content.cpp  Content.h  Document.cpp  Document.h  Manifest.cpp  Manifest.h  Meta.cpp  Meta.h  Mimetype.cpp  Mimetype.h  ODTDefs.cpp  ODTDefs.h  Settings.cpp  Settings.h  Styles.cpp  Styles.h  Template.cpp  Template.h
src/template/: content.xml  meta.xml  settings.xml  styles.xml  template.odt
src/toc/: CMakeLists.txt  TOCBase.cpp  TOCBase.h  TOCDefs.cpp  TOCDefs.h
src/utils/: CMakeLists.txt  CSV.cpp  CSV.h  DebugString.cpp  DebugString.h  Font.cpp  Font.h  FontList.cpp  FontList.h  FontNdx.cpp  FontNdx.h  ImageRepository.cpp  (+16 more)
(+3842 files in other folders)
